# rust-trading-engine

./: .gitignore  Cargo.toml  README.md  package.json
backend/: Cargo.toml
backend/src/: api.rs  arena.rs  config.rs  csv.rs  data.rs  engine.rs  equity_curve.rs  main.rs  metrics.rs  models.rs  paths.rs
backend/src/data/: binance.rs  mod.rs
backend/src/engine/: execution.rs  mod.rs
backend/src/strategy/: buy_and_hold.rs  mod.rs  moving_average.rs  random.rs  rsi.rs
data/: formatted_btc.csv  sample.csv
docs/: PRD.md  README.md  context.md  dev-log.md  glossary.md  rules.md  rust-learning.md  ui-rules.md
docs/learning/: dev-log.md  rsi-learning-notes.md  rust-learning.md
docs/product/: PRD.md
docs/project/: context.md
docs/reference/: glossary.md  rules.md  trading-handbook.md  ui-rules.md
outputs/: equity_buy_and_hold.csv  equity_moving_average_5_20.csv  equity_random.csv  results.json  trades_buy_and_hold.csv  trades_moving_average_5_20.csv  trades_random.csv
scripts/: dev.sh
src/: data.rs  engine.rs  main.rs  metrics.rs  models.rs  strategy.rs
src/strategy/: mod.rs  moving_average.rs
ui/: README.md  backtest-results-plugin.ts  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
ui/src/: App.tsx  index.css  types.ts
ui/src/components/: AppHeader.tsx  CandlestickChart.tsx  ChartSection.tsx  DashboardViewToggle.tsx  DrawdownChart.tsx  EquityChart.tsx  HelpHint.tsx  PriceChart.tsx  StrategyMetricCards.tsx  StrategyTable.tsx  chartXAxis.ts
ui/src/constants/: chartTheme.ts  layout.ts
ui/src/lib/: metricStyles.ts  (+1 more)
(+12 files in other folders)
