[package]
name = "rust-trader"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["json"] }
chrono = { version = "0.4", default-features = false, features = ["std"] }
http = "1"
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "net", "rt", "rt-multi-thread"] }
tower-http = { version = "0.6.8", features = ["cors"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
